--- a/games/templates/games/base.html
+++ b/games/templates/games/base.html
@@ -11,9 +11,17 @@
     <title>Games4Rent</title>
   </head>
   <body>
+  <!-- As a link -->
+<nav class="navbar navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Games4Rent</a>
+  </div>
+</nav>
+  <main class="container">
     {% block content %}
 
     {% endblock %}
+  </main>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
