--- a/games/templates/games/index.html
+++ b/games/templates/games/index.html
@@ -8,7 +8,8 @@
         <title>Title</title>
     </head>
     <body>
-    <table class="table">
+    <table class="table table-bordered table-hover">
+        <caption>Table of games to rent</caption>
         <thead>
         <tr>
             <th>Title</th>
