--- a/games/templates/games/index.html
+++ b/games/templates/games/index.html
@@ -1,4 +1,4 @@
-{% extends 'games/base.html' %}
+{% extends 'base.html' %}
 {% block content %}
 
     <!DOCTYPE html>
@@ -8,7 +8,7 @@
         <title>Title</title>
     </head>
     <body>
-    <table class="table table-bordered table-hover">
+    <table class="table table-bordered table-hover caption-top">
         <caption>Table of games to rent</caption>
         <thead>
         <tr>
@@ -21,7 +21,9 @@
         <tbody>
         {% for game in games %}
             <tr>
-                <td>{{ game.title }}</td>
+                <td>
+                    <a href="{% url 'games:detail' game.id %}">{{ game.title }} </a>
+                </td>
                 <td>{{ game.genre }}</td>
                 <td>{{ game.number_in_stock }}</td>
                 <td>{{ game.daily_rate }}</td>
