--- a/games/templates/games/detail.html
+++ b/games/templates/games/detail.html
@@ -5,9 +5,9 @@
         <caption>List of games to rent</caption>
         <thead>
         <tr>
-            <th>Title</th>
-            <th>Genre</th>
-            <th>Stock</th>
+            <th scope="col">Title</th>
+            <th scope="col">Genre</th>
+            <th scope="col">Stock</th>
         </tr>
         </thead>
         <tbody>
