--- a/games/templates/games/index.html
+++ b/games/templates/games/index.html
@@ -12,10 +12,10 @@
         <caption>Table of games to rent</caption>
         <thead>
         <tr>
-            <th>Title</th>
-            <th>Genre</th>
-            <th>Stock</th>
-            <th>Daily Rate</th>
+            <th scope="col">Title</th>
+            <th scope="col">Genre</th>
+            <th scope="col">Stock</th>
+            <th scope="col">Daily Rate</th>
         </tr>
         </thead>
         <tbody>
