adding some text to homepage

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,13 @@
     <a class="navbar-brand" href="#">Games4Rent</a>
   </div>
 </nav>
+
+  <div>
+      <H1> Games 4 Rent</H1>
+  </div>
+  <div>
+      <p>Welcome to my game rental store</p>
+  </div>
   <main class="container">
     {% block content %}
 
